[package]
name = "zonebuilder-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zonebuilder = "0.1.0"
zonebuilder = { git = "https://github.com/zonebuilders/zonebuilder-rust/" }
geojson = "0.22.2"
geo = "0.17.1"
pythonize = "0.15.0"

[lib]
name = "zonebuilder_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]