[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "zonebuilder"
version = "0.1.4"
description = "Python package for creating zoning systems"
license = {text = "GNU Affero General Public License v3"}
python = ">=3.6"
readme = "README.md"
authors = [
    {email = "pushkarkopparla@gmail.com"},
    {name = "Pushkar Kopparla"}
]
maintainers = [
    {name = "Dustin Carlino", email = "xxx@python.org"},
    {name = "Robin Lovelace", email = "zonebuildersr@gmail.com"}
]
[project.urls]
Homepage = "https://github.com/zonebuilders/zonebuilder-py"
